--- a/trunk/abstract.tex
+++ b/trunk/abstract.tex
@@ -1,7 +1,4 @@
-Occupancy Grid are refereed in several literatures as an important tool to represent the surround environment of a robot, and working along with a statistical evaluation methods (e.g. importance sampling) is possible to perform clustering and classification of certain objects, Fast Clustering and Track Algorithms(FCTA). But in certain applications we do not have infinity processing power or enough samples. Thus, acquire certitude in the results takes longer and can compromise the \textit{killer application} of the algorithm, and the appearance of new objects that need to be tracked in the scene provoke steady space explosion, in which most of the times invalidates the real applicability of the solution. So we propose a method based in Bayesian Occupancy Filter that allows segmenting the static and dynamic environment with reduced number of frames, even though capable to distinguish these two environments with an acceptable accuracy, this possibility can be applied to other proposed solution to reduce the execution time for obtaining the results from output of the sensors. The algorithm was tested in a vehicle equipped with IBEO laser scanners.
-
-
-
+Scene understanding is a fundamental process in robotics, several techniques have been applied with the intent to better classify the objects in the scene with more quality and/or a better performance. The occupancy grid is refereed by many as one of the major tools to represent the environment, gathering precision and performance in the representation. The algorithm proposed by this document extracts the dynamic objects from the environment with the smallest possible number of samples using occupancy grid mapping, resulting in a lightweight real-time application. The main focus is to apply it, in the future, for  Advanced Driving Assistence Systems(ADAS). Throughout this document we will show some issues imposed by the usage of our algorithm in ADAS, and solution for those problems. Qualitative results of the algorithm applied in a Lexus LS600h car equipped with LIDAR lasers scanners will be shown.
 
 %\end{abstract}
 %\abstractintoc
