--- a/report.tex
+++ b/report.tex
@@ -9,6 +9,7 @@
 %\usepackage[parfill]{parskip}    % Activate to begin paragraphs with an empty line rather than an indent
 \usepackage{graphicx}
 \usepackage{amsmath}
+\usepackage{float}
 \usepackage{fullpage}
 \usepackage{mathptmx} % font = times
 \usepackage{helvet} % font sf = helvetica
