--- a/chapter03.tex
+++ b/chapter03.tex
@@ -4,7 +4,7 @@
 
 The main goal of this research is to distinguish all dynamic objects present in the scene. The scene is observed from a camera installed in a vehicle, so called testbed.
 
-This setup brings one big issue: non-static camera. Thus, \textit{apriori} all the objects are moving, even the static objects, due to the motion executed by the vehicle.
+This setup brings one big issue: non-static sensor. Thus, \textit{apriori} all the objects are moving, even the static objects, due to the motion performed by the vehicle.
 
 The distinction between static and dynamic are considering the subjects in world reference frame, so the goal is to be able to classify the dynamic object in the scene using the world as reference frame. By finding the dynamic objects $O_{dynamic}$ we can perfectly obtain the static $O_{static}$ ones as well, by subtracting the dynamic one from the scene $S$.
 
@@ -15,20 +15,22 @@ S=O_{static}+O_{dynamic}
 \section{Demonstrator configuration} %configuration of the lasers, diagram
 \label{sec:demonstrator}
 
+\subsection{LIDAR laser scanners}
+
 Our testbed is a Toyota Lexus car equipped with two LIDAR lasers scanner (Check Section~\ref{sec:testbed} for the specification) installed in the frontal bumper (Figure~\ref{fig:demonstrator:birdeye}).
 
 \begin{figure}[h]
    \centering
      \begin{tabular}{lr}
-       \includegraphics[scale=0.4]{img/fig:demonstrator:birdeye}
+       \includegraphics[scale=0.3]{img/fig:demonstrator:birdeye}
      \end{tabular}
    \caption{Bird-eye view: LIDAR laser scanners location}
    \label{fig:demonstrator:birdeye}
 \end{figure}
 
-Each LIDAR is distributed in layers (Figure~\ref{fig:demonstrator:lateral}) and scanning range (Figure~\ref{fig:demonstrator:superior}). 
+Each LIDAR is capable of scanning in four layers, their relationship is shown  in the Figure~\ref{fig:demonstrator:lateral}), and every layers have its horizontal Field of View (FoV), one example is given for the layer 1 in the Figure~\ref{fig:demonstrator:superior}).
 
-There are four layers in total, each layer disposed vertically in different angles. The road is considered as base for the angle formation. This angle is formed by an imaginary line, which is parallel to the road surface, and the layer trajectory. Those angles are depicted in the Figure~\ref{fig:demonstrator:lateral}.
+With four layers in total, the layers are arranged as planes with different angles but one common vetex, anchored at center of the LIDAR. The road is considered as base for the angle formation, it is formed with imaginary plane (parallel to the road surface) and the a plane formed by the layer. Those angles are depicted in the Figure~\ref{fig:demonstrator:lateral}.
 
 \begin{figure}[h]
    \centering
@@ -39,21 +41,20 @@ There are four layers in total, each layer disposed vertically in different angl
    \label{fig:demonstrator:lateral}
 \end{figure}
 
-A single layer sweeps the environment in a limited range, in the Table~\ref{tab:beam:interception} we can see the layers and their specific range. The LIDAR laser scanner used in our tests have the $0.5^{\circ}$ resolution, meaning that every layer is capable of collecting samples at $0.5^{\circ}$ of distance in between. 
+A single layer sweeps the environment in a limited horizontal FoV, in the Table~\ref{tab:beam:interception} we can see the layers and their specific range. The LIDAR laser scanner, used in our tests, have the $0.5^{\circ}$ resolution. Meaning that every layer is capable of collecting samples at $0.5^{\circ}$ of angular distance in between. 
 
-To calculate the number of beams available in the layer $\ell$, we apply the Equation~\ref{eq:totalbeams}, where the functions $min$ and $max$ are the minimum and maximum angles that can be reached by the layer $\ell$, and the function $resolution$ gives the resolution of the LIDAR laser scanner $\rho$, this specification is provided by the manufacturer. 
+To calculate the number of beams available in the layer $\ell$, we apply the Equation~\ref{eq:totalbeams}, where the functions $min$ and $max$ are the minimum and maximum angles that can be reached by the layer $\ell$, and the function $resolution$ gives the resolution of the LIDAR laser scanner $\rho$, this is a specification provided by the manufacturer. 
 
-Thus, we can calculate the number of beams in a layer according with its range. Let's take as example the first layer and calculate the number of beans available in this layer. 
+Thus, we can calculate the number of beams in a layer based on its horizontal FoV and LIDAR resolution. Let's take as an example the first layer (layer 1) and calculate the number of beams available in this layer. 
 
-The first layer has a range that varies from $+35^\circ$ to $-60^\circ$ (minimum and maximum range, respectively), the resolution is $0.5^\circ$, according to the specification of the manufacturer. By applying those values in the Equation~\ref{eq:totalbeams} we have $190$ beams available for the first layer.
+The first layer has a horizontal FoV that varies from $+35^\circ$ to $-60^\circ$ (minimum and maximum FoV, respectively), the resolution is $0.5^\circ$, according to the specification of the manufacturer. By applying those values in  the Equation~\ref{eq:totalbeams} we have as result $190$ beams available for the first layer.
 
 \begin{equation}
 \label{eq:totalbeams}
 beams_{total}(\ell)=\frac{|max(\ell)-min(\ell)|}{resolution(\rho)}
 \end{equation}
 
-
-From every individual beam is possible to obtain the \textit{impact point}, meaning the distance between the LIDAR laser scanner and the first object to intercept the laser beam.
+From every individual beam is possible to obtain the \textit{impact point}, meaning the distance between the LIDAR laser scanner and the first object to intercept the laser beam, limited to $200m$ maximum (More details about the specification in Section~\ref{sec:testbed}).
 
 \begin{figure}[h]
    \centering
@@ -66,22 +67,52 @@ From every individual beam is possible to obtain the \textit{impact point}, mean
 
 
 \begin{table}
-\label{tab:beam:interception}
 	\begin{center}
 	    \begin{tabular}{ | c | c | c | c | c |}
 		    \hline
-		    Layer & $+50^\circ$ & $+35^\circ$ & $-50^\circ$ & $-60^\circ$ \\ \hline
-		    4 & + & + & + &  \\ \hline
-		    3 & + & + & + &  \\ \hline
-		    2 &  & + & + & + \\ \hline
-		    1 &  & + & + & + \\ \hline
-		    $\cap$ &  & + & + &  \\ \hline
+		    Layer & $+50^\circ$ to $+35^\circ$ & $+35^\circ$ to $-50^\circ$ & $-50^\circ$ to $-60^\circ$ \\ \hline
+		    4 & + & + &    \\ \hline
+		    3 & + & + &    \\ \hline
+		    2 &  & + & + \\ \hline
+		    1 &  & + & + \\ \hline
+		    $\cap$ &  & + &   \\ \hline
 	    \end{tabular}
 	\end{center}
     \caption{Layers and the horizontal distribution of the beams}
+\label{tab:beam:interception}
 \end{table}
 
-The testbed has two LIDAR installed, the multiple sensor usage in the demonstrator car makes of it a complex system, due to the number of data gathered, overlapped information and possible conflicted data. Thus, all sensor information must be carried in a consistent manner and this is accomplished by fusing the sensor information, more details about how this is done in the Section~\ref{sec:sensor:fusion}.
+The multiple sensor usage in the demonstrator car makes of it a complex system, due to the number of data gathered, overlapped information and possible conflicted data (Figure~\ref{fig:demonstrator:superior:overlap}). Thus, all sensor information must be carried in a consistent manner and this is accomplished by fusing the sensor information, more details about how this is done in the Section~\ref{sec:sensor:fusion}.
+
+\begin{figure}[h]
+   \centering
+     \begin{tabular}{lr}
+       \includegraphics[scale=0.5]{img/fig:demonstrator:superior:overlap}
+     \end{tabular}
+   \caption{Bird-eye view: LIDAR overlapping area}
+   \label{fig:demonstrator:superior:overlap}
+\end{figure}
+
+In the Figure~\ref{fig:demonstrator:superior:overlap} we depict the overlapping area when we consider the two LIDARs installed in our testbed.
+
+\subsection{MTi-G XSens}
+
+As we are about to see in the next Sections, the algorithm developed in this document uses two data as input: the LIDAR data (explained previously) and MTi-G sensor data.
+
+\begin{figure}[H]
+   \centering
+     \begin{tabular}{lr}
+       \includegraphics[scale=0.3]{img/mti-g}
+     \end{tabular}
+   \caption{MTi-G unit}
+   \label{fig:xsens:mtig}
+ \end{figure}
+
+MTi-G unit (Figure~\ref{fig:xsens:mtig}) is a combination of Inertial Measurement Unit (IMU), GPS and barometer. The concept of MTi-G unit is not just gathering a set of sensors, it is about using information among them so that each individual sensor information can get benefits from the other ones and provide more precise information.
+
+One example good example is that the GPS can use the other sensor to estimate the position, this is useful in case of a short-period communication outages. 
+
+From this unit our algorithm utilizes the vertical $v_y$, horizontal $v_x$ velocities and the $Yaw$ angle of the car. The $Yaw$ is the angle of the car with respect to some fix point in earth (\textit{e.g.} north oriented).
 
 \section{Sensor pre-processing} %fusion module
 \label{sec:sensor:fusion}
@@ -90,101 +121,38 @@ The testbed has two LIDAR installed, the multiple sensor usage in the demonstrat
 
 \subsection{Purpose}
 
-The demonstrator car is composed with two LIDAR laser scanner sensors, as we saw in the Section~\ref{sec:sensor:fusion}. Each of the LIDAR laser scanner is composed of few layers and each layer contains several beams. Those beams are spread horizontally in a given angle range, the ranging (initial and final angles) depends on the layer.
+The demonstrator car is composed with two LIDAR laser scanner sensors, as we saw in the Section~\ref{sec:sensor:fusion}. Each of the LIDAR laser scanner is composed of few layers and each layer contains several beams. Those beams are spread in a given horizontal FoV. The horizontal FoV is layer dependent, varying according to the layer.
+
+In the Figure~\ref{fig:motion:framework}, we have represented the general framework modules for detecting the moving parts, our algorithm core is contained in the motion detection module, which will be explored later. We are making usage of two LIDARs, they provide several information from different specifications (different ranges and FoV), thus we use a fusion module which is responsible for gathering the information provided by all of the LIDAR in a consistent manner.
 
 \begin{figure}[h]
    \centering
      \begin{tabular}{lr}
        \includegraphics[scale=0.30]{img/fig:motion:framework}
      \end{tabular}
-   \caption{General framework for moving objects detection}
+   \caption{General framework for detection of moving parts}
    \label{fig:motion:framework}
 \end{figure}
 
 This data must be gathered together, but how give a unique representation for all information provided by the sensors in one single visualization? Recall that there are overlapping scanner reading, which means that there may exist conflicting readings due to the sensor failure.
 
-To solve that issue, the data of the different layers are fused. The technique adopted for the fusion was \textit{Linear Opinion Pools}, which results in the Occupancy Grid with fused data\cite{ADARVE-2012-671211}.
+Solving that issue implies in data fusion. \textit{Linear Opinion Pools} was used by a team member to make data fusion successfully, detailed information about this technique is explained in the document \cite{ADARVE-2012-671211}. The output of such fusing technique is an Occupancy Grid, which is used in our algorithm.
 
-\subsection{Building the Occupancy Grid}
+\subsection{LIDARs layers fusion}
 
-
-\subsubsection{The Grid}
-\label{ch03:buildgrid:grid}
-
-In a grid, the space interacting with the robot (the car demonstrator in our case) is discretized in regular sized independent cells, just like the one depicted in the Section~\ref{ch02:gridbased}.
-
-If we plot the output data from the LIDAR laser scanner sensors in an image, it will be similar to Figure~\ref{fig:motion:impactpoint}, which is the representation of the impact points. This representation suffer from two problems:
-
-\begin{itemize}
-\item singular sensing
-\item oblivious blind spot 
-\end{itemize}
-
-\textbf{Singular sensing} meaning that this representation presents information obtained by only one layer, although the LIDAR provides several layers with overlapping spots, which can help reduce the uncertainty of the sensors in some areas of the image. 
-
-\begin{figure}[h]
-   \centering
-     \begin{tabular}{lr}
-       \includegraphics[width=0.3\columnwidth]{img/fig:motion:impactpoint:01}
-       & \includegraphics[width=0.3\columnwidth]{img/fig:motion:impactpoint:02}
-     \end{tabular}
-   \caption{LIDAR laser scanner and impact points: On left the real environment \& On the right side the grid with impact point}
-   \label{fig:motion:impactpoint}
- \end{figure}
-
-
-\textbf{Oblivious blind spot} happens due to missing information about some cells, nothing is said about the other regions of the environment other than the impact points. We must to have a complete, or at least as complete as possible, representation of the environment even for those spots that are not observed by the sensor. In the Figure~\ref{fig:motion:impactpoint}, we can observe that there is no information about spots locate right after the impact point.
-
-Based in the work \cite{ADARVE-2012-671211} we can build a grid which contains the occupancy probability for all cells in the map for LIDAR laser scanner.
-
-For that we need to make the fusion of the layers($\ell$) provided by LIDAR. In the Equation~\ref{eq:sensor:lidarfusion} we want calculate the values for every individual cell. For given cell $C$, the probability of having this cell occupied is calculated with the agreement of all layers provided by the LIDAR.
-
+\subsubsection{Sensor fusion from the multiple lidar layers}
+Each of the  two lidar sensors installed on the vehicle provides 4 layers of scanning points. Each layer is used to compute an occupancy grid using the classical approach described in \cite{Thrun05}. In order to retrieve a single grid for representation of the environment, the data from all these layers are merged using the approach described in \cite{ADARVE-2012-671211}. This approach fuses the sensory information by using Linear Opinion Pools \cite{DeGroot1974}. It has the advantage of reducing the errors due to conflicting information from the multiple layers.\\
+The principle is to generate a posterior distribution over the occupancy of a cell $C$ of the grid given the opinion of $m$ sensors $\left\{ Y_1 \dots Y_m \right\}$.
+Each sensor gives two quantities: its estimation for the occupancy of the cell $P(C | Y_i)$ and $w_i(C)$, a measure of the confidence for such estimations.
+The idea is to shut-down those sensors that do not give relevant information to the process by assigning a low weight to them. The fusion of all sensory information will be as follows:
 \begin{equation}
-\label{eq:sensor:lidarfusion}
-P(C|\ell_1,\ell_2,\ell_3,\ell_4)
+\label{linealOpinionPoolEQ}
+  P(C | Y_1 \dots Y_m) = \alpha \sum \limits^m_{i=1} w_i(C) P(C | Y_i)
 \end{equation}
+where $\alpha = \left[ \sum \limits^m_{i=1} w_i(C) \right]^{-1}$ is a normalization factor for the weights.  Equation \eqref{linealOpinionPoolEQ} is used to generate
+2D-occupancy grids. For each sensor $Y_i$ we must define $P(C | Y_i)$, the probability of a cell being occupied given the sensor information; and $w_i(C)$, the confidence on the opinion. Complete derivations for these quantities are given in \cite{ADARVE-2012-671211}. The output of this fusion module is an occupancy grid. %write about occupancy grid
 
-Assuming we want to generate the occupancy grid for an space of $NxM$ cells, this would be calculated according to the Equation~\ref{eq:sensor:gridcalculation}. The Equation~\ref{eq:sensor:gridcalculation} take into consideration a confidence weight $w(C)$ for the measure obtained for the cell $C$ and the probability that the cell is occupied $P(C|\ell_i)$.
-
-\begin{equation}
-\label{eq:sensor:gridcalculation}
-P(C|\ell_1,\ell_2,\ell_3,\ell_4)=\alpha \sum_{i=1}^{4} w_i(C)P(C|\ell_i)
-\end{equation}
-
-The calculation of the cell occupancy is made differently depending on two situations. Depending on the position of the cell $C$ relative to the impact point.
-
-If the cell $C$ is located before an impact point (in between the LIDAR and impact point), the occupancy of that cell is calculated in function of the distance between the cell and the impact point, due to the uncertainty of the sensor model the normal distribution function $\eta$ is taken into consideration\cite{iyengar1991autonomous} Equation~\ref{eq:sensor:normal}.
-
-If the cell $C$ is located after the impact point, the probability assigned to the cell will be $max(0.5;d(p_c,p_l))$.
-
-\begin{equation}
-\label{eq:sensor:normal}
-\eta(x;\mu,\sigma)=\frac{1}{\sigma \sqrt{2\pi}}e^{-\frac{1}{2}(\frac{x-\mu}{\sigma})^2} 
-\end{equation}
-
-The function $w(C)$, which is the confidence of the value measured, has two components: the probability of an \textbf{unexpected object} to appear and the \textbf{angle} of the beam with respect to the road.
-
-\paragraph*{Beam hit angle} the angle formed between the beam (from LIDAR laser scanner) and the road can determine the maximum distance in which the beam can reach. By determining this factor we can establish the confidence of the beam in function of its maximum distance. By that we reduce the reliability of the impact points if it happen beyond the this \textit{maxima}. 
-
-This confidence is calculated according to the Equation~\ref{eq:sensor:confidence:angle}. In which the $z$ represents the distance between the target cell for the calculation and the LIDAR, the angle of the beam $\phi$ and the height of the LIDAR $h_l$ are parameters to calculate the maximum distance of the beam. 
-
-\begin{equation}
-\label{eq:sensor:confidence:angle}
-C_{angle}=max\{1+\frac{z\tan{\phi}}{h_l},0\}
-\end{equation}
-
-\paragraph*{Unexpected object} the probability of an unexpected object to appear is modeled with exponential distribution and normal distribution. If the cell located before the impact point it is modeled with exponential distribution, otherwise the normal normal $\eta$ distribution is used. The canonical form for the exponential distribution is given in the Equation~\ref{eq:sensor:confidence:uo:ed}
-
-\begin{equation}
-\label{eq:sensor:confidence:uo:ed}
-C_{unexpect}=\lambda e^{\lambda \xi}
-\end{equation}
-
-\paragraph*{Confidence composition} is done by gathering the Equations~\ref{eq:sensor:confidence:angle} and ~\ref{eq:sensor:confidence:uo:ed}.
-
-\begin{equation}
-C_{total}=C_{total}\ x\ C_{unexpect}
-\end{equation}
+Note that we assume independence among cells. This assumption, though it is very strong, is necessary to be efficient in computing equation \eqref{linealOpinionPoolEQ}, for each cell in parallel. %add section about performance
 
 \subsubsection{Justifying the performance}
 
@@ -214,7 +182,7 @@ In the Section~\ref{sec:demonstrator}, we saw that our test platform is composed
 
 So, before having a frame that can be used by our algorithm, its required to perform the fusion of the layers from the LIDAR, which is done by the \textbf{Fusion module}. 
 
-The details about the techniques adopted and the data processing were explained in the Section~\ref{ch03:buildgrid:grid}. From here on, we are going to proceed with explanation of our methods, which is identified as \textbf{Motion detection module}. This module is located at the end of the processing chain, as exhibit in the Figure~\ref{fig:motion:framework}. 
+The details about the techniques adopted and the data processing were explained in the Section~\ref{sec:sensor:fusion}. From here on, we are going to proceed with explanation of our methods, which is identified as \textbf{Motion detection module}. This module is located at the end of the processing chain, as exhibit in the Figure~\ref{fig:motion:framework}. 
 
 \begin{figure}[h]
    \centering
@@ -225,13 +193,151 @@ The details about the techniques adopted and the data processing were explained 
    \label{fig:motion:framework:motionmodule}
 \end{figure}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\subsection{Motion detection}
+
+In this section we detail the technique that we have developed to find moving parts
+of the environment. The input to this motion detection module consists of an occupancy grid
+generated by the fusion module described in previous section and that fuses data from eight layers of two laser scanners
+installed on the demonstrator vehicle. Let us represent this occupancy grid at time $t$ as 
+$OG_t$. The value of 
+each cell of this grid is between 0 and 1 i.e. $0 \leq OG_t[i] \leq 1$ (where $0 \leq i<N$ with $N$ being the total cells of this occupancy grid) which represents internal belief of 
+the ego vehicle about the occupancy state of each cell where 0 means empty and 1 means occupied.
+
+%explain XSens MTI-G in the beginning LIDAR, SENSOR MTI
+
+The output of the \textit{XSens MTI-G} motion sensor installed on the demonstrator, at time instant $t$,
+consists of (along with other information) two components of velocity $v_t=(v_x, v_y)$ and values of
+quaternion components for orientation $Q_t=(q_0, q_1, q_2, q_3)$. From these information we calculate the
+translational and rotational velocities $u_t=(\nu_t, \omega_t)$ of the demonstrator vehicle as follows.
+\begin{equation}
+\nu_t = \sqrt{v_x^2+v_y^2}
+\end{equation}
+To calculate rotational velocity of the vehicle we calculate yaw angle of the vehicle from the quaternion
+as demonstrated in the Equation~\ref{eq:quaternion:yaw}, the resultant $Yaw$ angle will be in radians.
+
+\begin{equation}
+Yaw = atan2(2(q_0 q_3+q_1 q_2),1-2(q_2^2+q_3^2))
+\label{eq:quaternion:yaw}
+\end{equation}
+
+And if $dt$ is the time difference between two data frames at time $t$ and $t-1$ then rotational speed $\omega$
+at time $t$ is equal to the yaw rate given as:
+\begin{equation}
+\omega_t = \frac{Yaw_t-Yaw_{t-1}}{dt}
+\end{equation}
+
+At each time instant $t$ these $OG_t$ and $u_t$ are input to the algorithm that consists of 
+following steps.
+
+\paragraph{Free and occupied counters arrays} for each new input occupancy grid $OG_t$ we 
+create two parallel counter arrays, having the same size as $OG_t$. The first called $FreeCount_t$ and the other called $OccupiedCount_t$ to keep count of the number of times a cell has been observed free and number of times it has been observed occupied, respectively. These arrays are initialized from $OG_t$ as follows ( $\forall i$  . $0 \leq i<N$ ):
+
+\begin{equation}
+OccupiedCount_t[i] =  \begin{cases} 1, & \mbox{ if $OG_t[i] > 0.5$} \\
+                       0, & \mbox{otherwise} \end{cases}
+\end{equation}
+and
+\begin{equation}
+FreeCount_t[i] = \begin{cases} 1, & \mbox{ if $OG_t[i] < 0.5$} \\
+                       0, & \mbox{otherwise} \end{cases}
+\end{equation}
+
+\paragraph{Counts update from previous step} Suppose $FreeCount_{t-1}$ and  $OccupiedCount_{t-1}$ are the
+updated counter arrays at time $t-1$ and we want to update new counters $FreeCount_t$ and $OccupiedCount_t$
+from these old counts. Since vehicle has undergone a position change determined by $u_t=(\nu_t, \omega_t)$
+so there is no direct correspondence between cells of two occupancy grids $OG_t$ and $OG_{t-1}$ and we
+must find transformations that map a cell in  $OG_{t-1}$ to a cell in $OG_{t}$ using $u_t$. This situation is
+shown in figure \ref{fig:gridmove}, $OG_{t-1}$ has origin at $O_{t-1}$ and $OG_t$ has origin at $O_t$. To find this transformation
+suppose $O_{t-1}=(x_{t-1}, y_{t-1}, \theta_{t-1}) = (0,0,0)$ is the pose (position and orientation) of the occupancy grid
+at time instant $t-1$ (i.e of $OG_{t-1}$) and we want to find $O_t=(x_t, y_t, \theta_t)$, the pose of $OG_t$
+with respect to $OG_{t-1}$ after it has undergone a motion of $u_t$. By taking $O_{t-1}=(0,0,0)$ in each iteration of the algorithm we highlight the fact that we solve localization only for two consecutives frames and do not care about the global localization. Now if $dt$ is the time difference between $t$ and $t-1$ then using circular motion model the pose $O_t$ is given as:
+
+\begin{equation}
+\left[\begin{array}{c}x_t \\ y_t\\ \theta_t \end{array} \right] = 
+\left[\begin{array}{c} \nu_t/\omega_t * sin(\omega_t * dt) \\ \nu_t/\omega_t - \nu_t/\omega_t * cos(\omega_t * dt) \\ \omega_t * dt \end{array}\right]
+\end{equation}
+
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale=0.8]{img/fig:translation}
+\caption{Position of the grid at instants $t-1$ and $t$. Vehicle undergoes a motion of $u_t=(\nu_t, \omega_t)$ to move from $O_{t-1}$ to $O_t$. We need to find the position of point $P$ of grid $OG_{t-1}$ in grid $OG_t$.}
+\label{fig:gridmove}
+\end{center}
+\end{figure}
+
+An important thing is to notice that we are concerned with the localization of two consecutive frames only
+and need not solve the complete SLAM problem, making the technique very fast. Moreover, empirically observed odometry error between two consective frames is less than 10 cm whereas the cell size is 20cm x 20cm
+enabling us to assume that cell mapping (explained next) from grid at $t-1$ to grid at $t$ is exact.
+
+To map a cell of grid $OG_{t-1}$ to grid $OG_t$ we proceed as follows. Suppose point $P$ (shown in figure \ref{fig:gridmove}) is the center of a cell in grid $OG_{t-1}$ and we want to find its corresponding cell in grid $OG_t$. We define following two pose manipulation operations. if $P_{ij}=[x_{ij}, y_{ij}, \theta_{ij}]^T$ is the pose of origin $j$ w.r.t origin $i$ and $P_{jk}=[x_{jk}, y_{jk}, \theta_{jk}]^T$ is the pose of origin $k$ w.r.t $j$ then the pose of $k$ w.r.t $i$ denoted as $P_{ik}=[x_{ik}, y_{ik}, \theta_{ik}]^T$ is given as:
+\begin{equation}
+P_{ik} \equiv \oplus (P_{ij}, P_{jk}) = \left[ \begin{array}{c}
+x_{jk}\cos(\theta_{ij})-y_{jk}\sin(\theta_{ij})+x_{ij} \\
+x_{jk}\sin(\theta_{ij})+y_{jk}\cos(\theta_{ij})+y_{ij} \\
+\theta_{ij}+\theta_{jk} \end{array} \right] 
+\end{equation}
+For the pose $P_{ij}$ the reverse pose relationship $P_{ji}=[x_{ji}, y_{ji}, \theta_{ji}]^T$ (pose of $i$ w.r.t $j$) is defined as:
+\begin{equation}
+P_{ji} \equiv \ominus (P_{ij}) = \left[ \begin{array}{c}
+-x_{ij}\cos(\theta_{ij})-y_{ij}\sin(\theta_{ij}) \\
+x_{ij}\sin(\theta_{ij})-y_{ij}\cos(\theta_{ij}) \\
+-\theta_{ij} \end{array} \right] 
+\end{equation}
+
+Since the pose of $O_t$ w.r.t $O_{t-1}$ is $P_{O_{t-1}O_t}=[x_t,y_t,\theta_t]^T$ and point $P$ has pose $P_{O_{t-1}P}=[x,y,0]^T$ w.r.t $O_{t-1}$. The pose of this point $P$ w.r.t $O_t$ is calculated as.
+\begin{equation}
+P_{O_tP} = \oplus (P_{O_tO_{t-1}}, P_{O_{t-1}P})
+\end{equation}
+or
+\begin{equation}
+P_{O_tP} = \oplus (\ominus(P_{O_{t-1}O_t}), P_{O_{t-1}P})
+\end{equation}
+First two components of $P_{O_tP}$ give $x$ and $y$ positon of point $P$ w.r.t origin $O_t$. From these $x$ and $y$ values we can easily calculate the index of the cell where point $P$ lies in grid $OG_t$. And following Equation~\ref{eq:grid:cell:calculation} are used to calculate the row and column of the cell in which $P$ lies, where $cell_{size}$ is fixed in $0.2$ and $gridWidth$ .
+
+\begin{equation}
+cell(column,row)=(\frac{1}{cell_{size}}(x+\frac{gridWidth}{2}),\frac{y}{cell_{size}})
+\label{eq:grid:cell:calculation}
+\end{equation}
+
+
+%\begin{equation}
+%cell_{column}=(x+gridWidth/2)/cellSize
+%\end{equation}
+
+%\begin{equation}
+%cell_{row}=y/cellSize
+%\end{equation}
+
+These transformations will map a cell having index $i$ in $OG_{t-1}$ to a cell having index $j$ in grid $OG_t$. If this cell $j$ is visible in $OG_t$ i.e $0<=j<N$ then we can update new count values for this cell as follows:
+\begin{equation}
+FreeCount_t[j] = FreeCount_t[j] + FreeCount_{t-1}[i]
+\end{equation}
+and
+\begin{equation}
+OccupiedCount_t[j] = OccupiedCount_t[j] + OccupiedCount_{t-1}[i]
+\end{equation}
+
+
+
+We repeat this process for all cells of grid $OG_{t-1}$ to update counts values in grid $OG_{t}$.
+
+\paragraph{Motion detection} After the counts arrays have been updated as explained above the motion grid can be calculated from the new data as follows:
+\begin{equation}
+MotionGrid_t[i] = \begin{cases} 1, & \mbox{$OG_t[i] > 0.5$ and} \\ & \mbox {$FreeCount_t[i]>2*OccupiedCount_t[i]$} \\
+                                0, & \mbox{otherwise}\end{cases}
+\end{equation}
+After this processing $MotionGrid_t$ has 1s in the cells which are detected as belonging to moving objects.
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{Non-static sensor issue}
 
 The LIDAR is installed on a vehicle, the goal is to acquire measures while vehicle is moving. So it captures the surrounding and the data is processed by the \textbf{fusion module} resulting in Occupancy Grid $OG_t$. This process is repeated for each frame obtained. This is required to transform the data into the proper input required by the \textbf{motion detection module}.
 
-The position of the LIDAR gives us the fully dynamic scenario impression. Meaning that, by the LIDAR sensor perspective the entire scenario is moving and all subjects are changing their position, except for those who are following the same trajectory as the vehicle and at the speed. 
+The position of the LIDAR gives us the fully dynamic scenario impression. Meaning that, by the LIDAR sensor perspective the entire scenario is moving and all subjects are changing their position, except for those who are following the same trajectory as the vehicle and at the same speed. 
 
 The footage used in the tests are recorded in $24fps$ (frames per second). Although we have a large amount of frames in a sequence we are able to achieve good qualitative results by using two frames. 
 
@@ -283,7 +389,11 @@ v_t=\sqrt{v_h^2+h_v^2}
 
 %\subsection{Occupancy counting}
 
-%For the moment, we assume that the LIDAR sensor is statically positioned and observes the environment.
+%At this moment, after solving the \textit{Non-static sensor issue}, we have two frames in which i can apply a correspondence mapping function. The correspondent mapping function gives us the occupancy information of the same area, this seems obvious and something trivial to do, but in our case as we are dealing with a non-static sensor, meaning that there is no direct correspondence between two frames. \textit{e.g.} meaning that in a 2D images, if we capture two frames in different Point-of-View, one at instant $\alpha (100,100)$ and other at instant $\beta (100,100)$, the $\alpha$ and $\beta$ do not correspond to the same region. 
+
+%Now we need a technique that will assist us in integrating new observation frames to the curren
+
+
 
 %How to update the probability of an Occupancy grid with 
 %In the occupancy counting, 
